src/visitor/snapshots/mst__visitor__dot__tests__dot_high_page.snap
---
source: src/visitor/dot.rs
expression: v.into_inner().finalise()
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 42|<k1>·|k1|<k2>·|k2|<high_page>·"]
	page_1:high_page -> page_2:head [fontcolor=red color=red label="high page"];

	page_2 [shape=record, label="<head>Level 0|<z_high1>·|z_high1"]

}

