src/visitor/snapshots/mst__visitor__dot__tests__dot_lt_pointer.snap
---
source: src/visitor/dot.rs
expression: v.into_inner().finalise()
---
digraph g {
	page_2:lt2 -> page_3:head;
	page_3 [shape=record, label="<head>Level 1|<lt1>·|lt1"]

	page_1:z_k1 -> page_2:head;
	page_2 [shape=record, label="<head>Level 2|<lt2>·|lt2"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 42|<z_k1>·|z_k1|<z_k2>·|z_k2"]

}

